--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+body{
+    font-family: 'PT Sans', sans-serif;
+}
+:root{
+    --primary-color:#F9FAFB;
+    --second-color:#D1D5DB;
+    --third-color:#34D399;
+    --four-color:#EF4444;
 
+}
 h1{
     text-align: center;
 }
 .container{
     max-width: 600px;
-    height: 500px;
-    background-color: aquamarine;
+    height: 100%;
+    background-color:var(--second-color);
     margin: auto;
   
 }
@@ -14,6 +24,7 @@ h1{
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    margin-top:2rem;
 }
 #get-input{
     width: 250px;
@@ -21,21 +32,22 @@ h1{
     border-radius: 5px;
     border:0;
     outline-width: 0;
+   
 }
 #add{
    width:50px;
    height: 30px;
-    background-color: blue;
+    background-color: var(--third-color);
 }
-.remove{
+#remove{
     width:50px;
    height: 30px;
-    background-color:red;
+    background-color:var(--four-color);
 }
 
 
 tr:nth-child(even){
-    background-color: aliceblue;
+    background-color: var(--primary-color);
   
 }
 tr,th{
@@ -45,18 +57,26 @@ tr,th{
 }
 td{
     width:500px;
-  
+   
 }
+.fa{
+    float: right;
+}
+
 #btnOne{
-    margin-left: 50px;
+    border:none;
+   
+    margin:0 0.5rem;
     width:50px;
 height: 30px;
 }
 #btnTwo{
-    margin-left:50px;
-
+  
+    border:none;
+    background-color:var(--four-color);
     width:50px;
     height: 30px;
+    margin:0 0.5rem;
 }
 table{
     margin-top: 2rem;;
@@ -66,5 +86,26 @@ table{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: blueviolet;
+    background-color: var(--primary-color);
+}
+.searchContainer{
+    margin:0 1rem;
+    display:flex;
+    align-items: center;
+}
+.mainTop h1{
+    margin-left:1rem;
+}
+#search{
+    margin:0 0.5rem;
+    border:none;
+    outline-width: 0;
+    padding:0.5rem;
+    border-radius: 0.5rem;
+}
+#save{
+    width:50px;
+   height: 30px;
+    display:none;
+    background-color: var(--third-color);
 }
